Add setting null values for nulls for every column. Add new ByteArrayColumn for byte arrays