@@ -49,10 +49,15 @@ public class StringColumn extends Column<StringColumn, String> {
      */
     @Override
     public String fromSqlType(Object value) throws UnsupportedSqlType {
-        if (value instanceof String) {
+        if (value == null) {
+            if (!isNullable()) {
+                throw new UnsupportedSqlType("Value cannot be null.");
+            } 
+            return null;
+        } else if (value instanceof String) {
             return (String) value;
         }
-        throw new UnsupportedSqlType("Expected String got %s instead.".formatted(value.getClass().getName()));
+        throw new UnsupportedSqlType(String.format("Expected String got %s instead.", value.getClass().getName()));
     }
 
     /**
@@ -66,10 +71,16 @@ public class StringColumn extends Column<StringColumn, String> {
     @Override
     public void setToStatement(PreparedStatement statement, Integer index, Object value)
             throws UnsupportedValueType, SQLException {
-        if (value instanceof String) {
+        if (value == null) {
+            if (!isNullable()) {
+                throw new UnsupportedValueType("Value cannot be null.");
+            } 
+            statement.setString(index, null);
+        } else if (value instanceof String) {
             statement.setString(index, (String) value);
         } else {
-            throw new UnsupportedValueType("Expected String got %s instead.".formatted(value.getClass().getName()));
+            throw new UnsupportedValueType(
+                    String.format("Expected String got %s instead.", value.getClass().getName()));
         }
     }
 
