@@ -45,10 +45,16 @@ public class RealColumn extends NumericColumn<RealColumn, Float> {
      */
     @Override
     public Float fromSqlType(Object value) throws UnsupportedSqlType {
+        if (value == null) {
+            if (!isNullable()) {
+                throw new UnsupportedSqlType("Value cannot be null.");
+            }
+            return null;
+        } else
         if (value instanceof Float) {
             return (Float) value;
         }
-        throw new UnsupportedSqlType("Expected Float got %s instead.".formatted(value.getClass().getName()));
+        throw new UnsupportedSqlType(String.format("Expected Float got %s instead.", value.getClass().getName()));
     }
 
     /**
@@ -62,10 +68,16 @@ public class RealColumn extends NumericColumn<RealColumn, Float> {
     @Override
     public void setToStatement(PreparedStatement statement, Integer index, Object value)
             throws UnsupportedValueType, SQLException {
+        if (value == null) {
+            if (!isNullable()) {
+                throw new UnsupportedValueType("Value cannot be null.");
+            }
+            statement.setNull(index, java.sql.Types.REAL);
+        } else
         if (value instanceof Float) {
             statement.setFloat(index, (Float) value);
         } else {
-            throw new UnsupportedValueType("Expected Float got %s instead.".formatted(value.getClass().getName()));
+            throw new UnsupportedValueType(String.format("Expected Float got %s instead.", value.getClass().getName()));
         }
     }
 }
